# asteroids_game

./: .gitignore  asteroid.py  asteroidfield.py  circleshape.py  main.py  player.py  pyproject.toml  shoot.py
src/asteroids/: main.py
src/asteroids/actors/: asteroid.py  player.py  shoot.py
src/asteroids/engine/: circleshape.py
src/asteroids/systems/: asteroidfield.py
